# claude-private-skills

./: CLAUDE.md  README.md
.claude/skills/add-paper-from-url/: Dockerfile  SKILL.md  entrypoint.sh  run.sh
.claude/skills/artist-live-digest/: SKILL.md  weekly-to-slack.sh
.claude/skills/branch-review/: SKILL.md
.claude/skills/branch-review-loop/: SKILL.md
.claude/skills/check-updates/: Dockerfile  SKILL.md  check_updates.py  run.sh
.claude/skills/create-pr/: SKILL.md
.claude/skills/daily-digest/: SKILL.md
.claude/skills/daily-wrapup/: SKILL.md  fetch-calendar.sh  fetch-shell-history.sh  find-missing-wrapups.sh
.claude/skills/morning-brief/: SKILL.md
.claude/skills/news-digest/: SKILL.md  daily-digest-to-slack.sh
.claude/skills/org-deepsearch/: SKILL.md  config.example.toml
.claude/skills/org-graduate/: SKILL.md  (+1 more)
.claude/skills/project-init/templates/python/: .gitignore  .pre-commit-config.yaml  pyproject.toml
.claude/skills/project-init/templates/python/.claude/: settings.json
.claude/skills/project-init/templates/python/.claude/hooks/: format.sh
.claude/skills/project-init/templates/python/.github/: dependabot.yml
.claude/skills/project-init/templates/python/.github/workflows/: ci.yml
.claude/skills/project-init/templates/python/src/: app.py
.claude/skills/project-init/templates/python/tests/: test_app.py
.github/workflows/: ci.yml
scripts/: README.md  check-readme-skills.py  check-readme-skills.sh  claude-with-retry.sh  gws-secure  gws-secure-bootstrap
scripts/tests/: claude-with-retry-smoke.sh  gws-secure-smoke.sh
(+64 files in other folders)
