[project]
name = "__PROJECT_NAME__"
version = "0.1.0"
description = "__PROJECT_DESCRIPTION__"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pyright>=1.1",
    "ruff>=0.9",
]

# Treated as an application, not a distributable package: uv manages the venv
# and dev tools without building the project itself. To publish this as a
# library, add a [build-system] table and a src/ package layout, then drop the
# `package = false` line below.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
